# ginan

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  GinanFAQv03.html  ISSUES.md  LICENSE.md  README.md  about.html  aboutGinan.html  ambiguities.md  announcements.md  attitudes.md  bitbucket-pipelines.yml  codingStandard.md  conventions.md  defaultConfiguration.md  docsReadme.md  documents.html  flexPower.md  ga.html  ga.md  ginanFAQ.html  ginanUsage.index  gnss.html  home.index  home.md  homeHeader.md  homeless.md  index.html  index2.html  install.index  install.md  ionosphere.md  kalmanFilter.md  links.md  minimumConstraints.md  observations.md  orbits.md  overview.md  (+30 more)
Docs/: GinanEDA_AWS_EC2_Instruction_v1.1.txt  aboutGinan.md  aboutGnss.md  ambiguities.md  announcements.md  autoDownload.md  codingStandard.md  conventions.md  defaultConfiguration.md  exampleConfigs  ginanConfiguration.md  ginanEDA.md  home.md  homeless.md  ionosphere.md  kalmanFilter.md  links.md  observations.md  orbits.md  page.html  peaConfig.md  peaExamples.md  peaNetwork.md  peaUsage.index  peaUser.md  (+9 more)
src/: CMakeLists-C.txt  CMakeLists-F.txt  CMakeLists.txt  CMakePresets.json  pea.desktop
src/Architecture/: Ginan.cpp  Legend.cpp  Pea.Configuration.Examples  Pea.cpp  Pod.Configuration.Examples  Pod.cpp  UseCases.cppbak  architectureDocs.hpp  mainpage.md
src/cmake/: Configure.cmake  FindNetCDF.cmake  FindOPENBLAS.cmake  FindYAML_CPP.cmake  GitVersion.cmake
src/cmake/toolchain/: clang_linux_x64.cmake  clang_mac_arm64.cmake  clang_mac_x64.cmake  gcc_mac_arm64.cmake  mingw64.cmake
src/cpp/: CMakeLists.txt  pea.cpp
src/cpp/ambres/: ARmain.cpp  ARoutput.cpp  GNSSambres.cpp  GNSSambres.hpp  GNSSpivot.cpp  GinARNLamb.cpp  GinARWLamb.cpp  GinAR_main.cpp  GinARoutpt.cpp  GinARpivot.cpp  NLambest.cpp  WLambest.cpp
src/cpp/brdc2sp3/: brdc2sp3_main.cpp  brdc2sp3_main_bck.cpp
src/cpp/common/: acsConfig.cpp  acsConfig.hpp  acsConfigDocs.cpp  acsFileStream.hpp  acsNtripBroadcast.cpp  acsNtripBroadcast.hpp  acsNtripServer.cpp  acsNtripServer.hpp  acsNtripStream.cpp  acsNtripStream.hpp  acsQC.cpp  acsQC.hpp  acsRinexStream.hpp  acsRtcmStream.hpp  acsStream.cpp  acsStream.hpp  algebra.cpp  algebra.hpp  algebraTrace.cpp  algebraTrace.hpp  algebra_old.cpp  antenna.cpp  antenna.hpp  api.cpp  api.hpp  attitude.cpp  attitude.hpp  azElMapData.hpp  biasSINEX.hpp  biasSINEXread.cpp  biasSINEXwrite.cpp  biases.cpp  biases.hpp  binaryStore.cpp  binaryStore.hpp  cache.hpp  common.cpp  common.hpp  compare.cpp  compare.hpp  (+150 more)
src/cpp/configurator/: htmlFooterTemplate.hpp  htmlFooterTemplate.html  htmlHeaderTemplate.hpp  htmlHeaderTemplate.html
src/cpp/gui/: anode.cpp  anode.hpp  beast.cpp  ginan.cpp  ginan.hpp  map.js
src/cpp/inertial/: posProp.cpp  posProp.hpp
src/cpp/iono/: geomagField.cpp  geomagField.hpp  ionex.cpp  ionexWrite.cpp  ionoBSplines.cpp  ionoLocalSTEC.cpp  ionoMeas.cpp  ionoModel.cpp  ionoModel.hpp  ionoSBAS.cpp  ionoSBAS.hpp  ionoSpherical.cpp  ionoSphericalCaps.cpp
src/cpp/loading/: boost_ma_type.h  input_otl.h  interpolate_loading.cpp  load_functions.cpp  load_functions.h  loadgrid.cpp  loadgrid.h  loading.cpp  loading.h  make_otl_blq.cpp  tide.cpp  tide.h  utils.cpp  utils.h
src/cpp/orbprop/: GGM03S.txt  acceleration.cpp  acceleration.hpp  aod.cpp  aod.hpp  boxwing.cpp  boxwing.hpp  centerMassCorrections.cpp  centerMassCorrections.hpp  coordinates.cpp  coordinates.hpp  forceModels.cpp  forceModels.hpp  gravity.cpp  gravity.hpp  iers2010.cpp  iers2010.hpp  jplEph.cpp  jplEph.hpp  oceanPoleTide.cpp  oceanPoleTide.hpp  oceanTide.cpp  oceanTide.hpp  orbitProp.cpp  orbitProp.hpp  planets.cpp  planets.hpp  spaceWeather.cpp  spaceWeather.hpp  staticField.cpp  staticField.hpp  tideCoeff.cpp  tideCoeff.hpp
src/cpp/other_ssr/: otherSSR.hpp  prototypeCmpSSRDecode.cpp  prototypeCmpSSREncode.cpp  prototypeIgsSSRDecode.cpp  prototypeIgsSSREncode.cpp
src/cpp/pea/: cycleSlip.cpp  cycleSlip.hpp  inputs.cpp  inputsOutputs.hpp  main.cpp  minimumConstraints.cpp  minimumConstraints.hpp  networkEstimator.cpp  networkEstimator.hpp  orbits.cpp  outputs.cpp  peaCommitStrings.cpp  peaCommitStrings.hpp  peaCommitVersion.h.in  peaLibVersion.h.in  pea_snx.cpp  ppp.cpp  ppp.hpp  ppp_ambres.cpp  ppp_callbacks.cpp  ppp_network.cpp  ppp_obs.cpp  ppp_pseudoobs.cpp  ppp_slr.cpp  ppp_user.cpp  ppppp.cpp  ppppp_ambres.cpp  ppppp_obs.cpp  ppppp_pseudoobs.cpp  preprocessor.cpp  preprocessor.hpp  spp.cpp
src/cpp/peaUploader/: uploadMain.cpp
src/cpp/rtklib/: ephemeris.cpp  ionex.cpp  lambda.cpp  lambda.h  preceph.cpp  preceph.hpp  readtrop.cpp  rinex.cpp  rinex.hpp  rtkcmn.cpp  tides.cpp  tides.hpp  trop.cpp  trop.h  vmf3.cpp  vmf3.h  wancorr.cpp  wancorr.h
src/cpp/sbas/: decodeL1.cpp  decodeL5.cpp  sbas.cpp  sbas.hpp  sisnet.cpp  sisnet.hpp
src/cpp/slr/: slr.hpp  slrCom.cpp  slrObs.cpp  slrRec.cpp  slrSat.cpp
src/cpp/test/: runTests.sh
src/cpp/test/config/data/: IonSphericalCaps.yaml
src/cpp/test/include/: minunit.h
src/cpp/test/sinex/: test_sinex.cpp  test_sinex2.cpp
src/cpp/trop/: tropCSSR.cpp  tropGPT2.cpp  tropModels.cpp  tropModels.hpp  tropSAAS.cpp  tropSBAS.cpp  tropVMF3.cpp
src/doc_templates/: 0001-Patch-to-make-call-graphs-output-in-order-of-calling.patch  CMakeLists.txt  Dockerfile  Doxyfile.in  DoxygenLayout.xml.in  README.md  css.css  entrypoint.sh  instally.sh
src/fortran/: BOXWINIT.f90  CATfile.f90  CMakeLists.txt  CONST.f  EOP.f90  ERPFBOXW.f90  FSIZER3.f  GM_de.f90  IERS_CMP_2015.F  INTERP.f  PLEPH.f  PMSDNUT2.F  POD.in  PROPBOXW.f90  R1.for  R3.for  R3x3.f95  SPLIT.f  SRPFBOXW.f90  STATE.f90  SURFBOXW.f90  UTLIBR.F  anp.for  apr_srp.f90  arctan.f90  asc2eph.f90  att_matrix.f03  att_matrix.f95  attitude.f03  attitude.f95  beta_angle.f90  beta_pred.f90  bi00.for  bp00.for  bpn2xy.for  brdc2ecef.f90  brdc_cmdline.f03  brdc_qc_gal.f90  brdc_qc_gps.f90  c2ixys.for  (+323 more)
src/fortran/unused/: ENU.f90  LAGINT.f  beta_interp.f90  brdcinfo.f95  eom_iers.f90  eop_cor2.f90  jdcalf.for  orb_sp3.f90  orbk_frame.f90  pwindup.f90  write_array.f90  xys06a.for
src/testing/: enums_magic.h  test_magic_enum.cpp
(+11281 files in other folders)
